--- a/templates/inc-index-body.html
+++ b/templates/inc-index-body.html
@@ -1,7 +1,7 @@
 <div class="content">
     <h1>Программы обучения</h1>
     <p>Курсы в течение года.</p>
-    <p>Расписание действует на: {{date}} <b>(дата подставляется шаблоном)</b></p>
+    <p>Расписание действует на: {{data}} <b>(дата подставляется шаблоном)</b></p>
     <table>
         <tr class="head">
             <th></th>
